# piggy-bank

./: .env.example  .gitignore  .renovaterc.json  .trivyignore  Justfile  LICENSE  README.md  docker-compose.yml  mise.toml  piggy-bank.code-workspace  trivy.yaml
.github/prompts/: plan-piggyBankMonorepo.prompt.md
.github/workflows/: backend.yml  frontend.yml  infra.yml  security.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: analysis.py  transactions.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  transaction.py  user.py
backend/app/schemas/: __init__.py  transaction.py  user.py
backend/app/services/: ai_advisor.py
backend/tests/: test_api.py
docs/: API.md  ARCHITECTURE.md  README.md  SETUP.md
frontend/: .env.local.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api-client.ts  auth.ts  utils.ts
infra/: terraform.tfvars.example
infra/azure/: README.md  main.tf  outputs.tf  variables.tf
infra/supabase/: README.md
